# hello_ecs

./: Cargo.toml
shader/: compile.bat  frag.spv  triangle.frag  triangle.vert  vert.spv
src/: camera_movements.rs  main.rs
src/ecs/: component.rs  entity.rs  mod.rs  system.rs  world.rs
src/renderer/: app.rs  buffer.rs  command.rs  command_pool.rs  constants.rs  core-renderer.rs  descriptor.rs  device.rs  frame_resources.rs  graphic_pipeline.rs  image.rs  instance.rs  material.rs  mod.rs  model.rs  render_pass.rs  scene.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  uniform_buffer.rs  utils.rs  vertex.rs
src/transform/: components.rs  mod.rs
