[package]
name = "hello_ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.35.0"
itertools = "0.15.0"
ash = { version = "0.38.0+1.3.281", features = ["linked"] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
anyhow = "1.0.103"
winit = { version = "0.30.13", features = ["rwh_06"] }
thiserror = "2.0.18"
log = "0.4.33"
tobj = "4.0.4"
png = "0.17"
nalgebra-glm = "0.21.0"
bitflags = "1.3.2"
